--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
         aws-region: ap-south-1
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync . arn:aws:s3:::tws-portfolio987 --delete
+      run: aws s3 sync . s3://tws-portfolio987 --delete
